# goit-ds-hw-03

Task_1/: create_DB.py  main.py  pyproject.toml
Task_2/: main.py  pyproject.toml  upload_collections.py
