[project]
name = "task-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Ros",email = "kukishvmasle@gmail.com"}
]
requires-python = ">=3.13"
dependencies = [
    "pymongo (>=4.16.0,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
